--- a/src/assets/scss/base/_normalize.scss
+++ b/src/assets/scss/base/_normalize.scss
@@ -1,10 +1,12 @@
 /* Document
    ========================================================================== */
+
 /**
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
-html {
+
+ html {
   box-sizing: border-box;
 }
 
@@ -23,9 +25,11 @@ html {
 
 /* Sections
      ========================================================================== */
+
 /**
    * Remove the margin in all browsers.
    */
+
 body {
   margin: 0;
 }
@@ -33,6 +37,7 @@ body {
 /**
    * Render the `main` element consistently in IE.
    */
+
 main {
   display: block;
 }
@@ -41,6 +46,7 @@ main {
    * Correct the font size and margin on `h1` elements within `section` and
    * `article` contexts in Chrome, Firefox, and Safari.
    */
+
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
@@ -48,10 +54,12 @@ h1 {
 
 /* Grouping content
      ========================================================================== */
+
 /**
    * 1. Add the correct box sizing in Firefox.
    * 2. Show the overflow in Edge and IE.
    */
+
 hr {
   box-sizing: content-box;
   /* 1 */
@@ -65,6 +73,7 @@ hr {
    * 1. Correct the inheritance and scaling of font size in all browsers.
    * 2. Correct the odd `em` font sizing in all browsers.
    */
+
 pre {
   font-family: monospace, monospace;
   /* 1 */
@@ -74,9 +83,11 @@ pre {
 
 /* Text-level semantics
      ========================================================================== */
+
 /**
    * Remove the gray background on active links in IE 10.
    */
+
 a {
   background-color: transparent;
   text-decoration: none;
@@ -86,19 +97,20 @@ a {
    * 1. Remove the bottom border in Chrome 57-
    * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
    */
+
 abbr[title] {
   border-bottom: none;
   /* 1 */
   text-decoration: underline;
   /* 2 */
-  -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
+  text-decoration: underline dotted;
   /* 2 */
 }
 
 /**
    * Add the correct font weight in Chrome, Edge, and Safari.
    */
+
 b,
 strong {
   font-weight: bolder;
@@ -108,6 +120,7 @@ strong {
    * 1. Correct the inheritance and scaling of font size in all browsers.
    * 2. Correct the odd `em` font sizing in all browsers.
    */
+
 code,
 kbd,
 samp {
@@ -120,6 +133,7 @@ samp {
 /**
    * Add the correct font size in all browsers.
    */
+
 small {
   font-size: 80%;
 }
@@ -128,6 +142,7 @@ small {
    * Prevent `sub` and `sup` elements from affecting the line height in
    * all browsers.
    */
+
 sub,
 sup {
   font-size: 75%;
@@ -146,9 +161,11 @@ sup {
 
 /* Embedded content
      ========================================================================== */
+
 /**
    * Remove the border on images inside links in IE 10.
    */
+
 img {
   border-style: none;
   display: block;
@@ -157,10 +174,12 @@ img {
 
 /* Forms
      ========================================================================== */
+
 /**
    * 1. Change the font styles in all browsers.
    * 2. Remove the margin in Firefox and Safari.
    */
+
 button,
 input,
 optgroup,
@@ -180,6 +199,7 @@ textarea {
    * Show the overflow in IE.
    * 1. Show the overflow in Edge.
    */
+
 button,
 input {
   /* 1 */
@@ -190,6 +210,7 @@ input {
    * Remove the inheritance of text transform in Edge, Firefox, and IE.
    * 1. Remove the inheritance of text transform in Firefox.
    */
+
 button,
 select {
   /* 1 */
@@ -199,13 +220,16 @@ select {
 /**
    * Correct the inability to style clickable types in iOS and Safari.
    */
+
+
 /**
    * Remove the inner border and padding in Firefox.
    */
+
 button::-moz-focus-inner,
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner {
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
@@ -213,16 +237,18 @@ button::-moz-focus-inner,
 /**
    * Restore the focus styles unset by the previous rule.
    */
+
 button:-moz-focusring,
-[type=button]:-moz-focusring,
-[type=reset]:-moz-focusring,
-[type=submit]:-moz-focusring {
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
 /**
    * Correct the padding in Firefox.
    */
+
 fieldset {
   padding: 0.35em 0.75em 0.625em;
 }
@@ -233,6 +259,7 @@ fieldset {
    * 3. Remove the padding so developers are not caught out when they zero out
    *    `fieldset` elements in all browsers.
    */
+
 legend {
   box-sizing: border-box;
   /* 1 */
@@ -251,6 +278,7 @@ legend {
 /**
    * Add the correct vertical alignment in Chrome, Firefox, and Opera.
    */
+
 progress {
   vertical-align: baseline;
 }
@@ -258,6 +286,7 @@ progress {
 /**
    * Remove the default vertical scrollbar in IE 10+.
    */
+
 textarea {
   overflow: auto;
 }
@@ -266,8 +295,9 @@ textarea {
    * 1. Add the correct box sizing in IE 10.
    * 2. Remove the padding in IE 10.
    */
-[type=checkbox],
-[type=radio] {
+
+[type="checkbox"],
+[type="radio"] {
   box-sizing: border-box;
   /* 1 */
   padding: 0;
@@ -277,8 +307,9 @@ textarea {
 /**
    * Correct the cursor style of increment and decrement buttons in Chrome.
    */
-[type=number]::-webkit-inner-spin-button,
-[type=number]::-webkit-outer-spin-button {
+
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -286,10 +317,12 @@ textarea {
    * 1. Correct the odd appearance in Chrome and Safari.
    * 2. Correct the outline style in Safari.
    */
+
 /**
    * Remove the inner padding in Chrome and Safari on macOS.
    */
-[type=search]::-webkit-search-decoration {
+
+[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -297,6 +330,7 @@ textarea {
    * 1. Correct the inability to style clickable types in iOS and Safari.
    * 2. Change font properties to `inherit` in Safari.
    */
+
 ::-webkit-file-upload-button {
   -webkit-appearance: button;
   /* 1 */
@@ -306,9 +340,11 @@ textarea {
 
 /* Interactive
      ========================================================================== */
+
 /*
    * Add the correct display in Edge, IE 10+, and Firefox.
    */
+
 details {
   display: block;
 }
@@ -316,15 +352,18 @@ details {
 /*
    * Add the correct display in all browsers.
    */
+
 summary {
   display: list-item;
 }
 
 /* Misc
      ========================================================================== */
+
 /**
    * Add the correct display in IE 10+.
    */
+
 template {
   display: none;
 }
@@ -332,6 +371,7 @@ template {
 /**
    * Add the correct display in IE 10.
    */
+
 [hidden] {
   display: none;
 }
@@ -353,29 +393,3 @@ button {
   padding: 0;
   margin: 0;
 }
-
-@font-face {
-  font-family: "Roboto";
-  src: url("./pages/fonts/Roboto-Regular.woff2") format("woff2");
-  font-display: swap;
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: "OpenSans";
-  src: url("./pages/fonts/Roboto-Regular.woff2") format("woff2");
-  font-display: swap;
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: "OpenSans";
-  src: url("./pages/fonts/OpenSans-Semibold.woff2") format("woff2");
-  font-display: swap;
-  font-weight: 600;
-  font-style: normal;
-}
-body {
-  font-family: "OpenSans", sans-serif;
-  font-weight: 400;
-}/*# sourceMappingURL=style.css.map */
