--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,4 +1,2 @@
-@import "./base/normalize";
-@import "./base/topography";
-@import "./base/colors";
+@import "./base/_normalize";
 @import "./base/header";
