--- a/pages/style.css
+++ b/pages/style.css
@@ -355,15 +355,8 @@ button {
 }
 
 @font-face {
-  font-family: "Roboto";
-  src: url("./pages/fonts/Roboto-Regular.woff2") format("woff2");
-  font-display: swap;
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
   font-family: "OpenSans";
-  src: url("./pages/fonts/Roboto-Regular.woff2") format("woff2");
+  src: url("./pages/fonts/OpenSans-Regular.woff2") format("woff2");
   font-display: swap;
   font-weight: 400;
   font-style: normal;
@@ -377,5 +370,102 @@ button {
 }
 body {
   font-family: "OpenSans", sans-serif;
+  font-size: 14px;
   font-weight: 400;
+}
+
+.middle-btn {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 600;
+  padding: 11px 16px 13px;
+  position: relative;
+  background-color: #fff;
+  border: none;
+  border-radius: 3px;
+  outline: none;
+  cursor: pointer;
+}
+.middle-btn:hover {
+  background-color: #f0f0f0;
+}
+.middle-btn--active::after {
+  content: "3";
+  position: absolute;
+  display: inline-block;
+  right: 0;
+  width: 17px;
+  height: 17px;
+  margin-right: 16px;
+  font-size: 15px;
+  text-align: center;
+  border: none;
+  border-radius: 50%;
+  background-color: #E0001B;
+  color: #fff;
+}
+.middle-btn--active span {
+  margin-right: 30px;
+}
+
+.header__btn-icon {
+  margin-right: 15px;
+}
+
+.header__nav-btn {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px 16px 24px;
+  background-color: #fff;
+  color: #1D1D1B;
+  border: none;
+  border-radius: 0px;
+  outline: none;
+  cursor: pointer;
+}
+.header__nav-btn > .header__nav-icon {
+  margin-right: 8px;
+}
+.header__nav-btn--active {
+  font-size: 16px;
+  font-weight: 600;
+  background-color: #E0001B;
+  color: #fff;
+  border-radius: 3px 0px 0px 3px;
+}
+.header__nav-btn--active > .header__nav-icon {
+  margin-right: 15px;
+}
+
+.header__form {
+  position: relative;
+  width: 300px;
+  margin: 0 auto;
+}
+.header__form input {
+  width: 100%;
+  height: 42px;
+  padding-left: 10px;
+  border: 2px solid #f0f0f0;
+  border-radius: 3px;
+  outline: none;
+  background: #fff;
+  color: #1D1D1B;
+}
+.header__form button {
+  position: absolute;
+  top: 0;
+  right: 0px;
+  width: 42px;
+  height: 42px;
+  border: none;
+  background: #E0001B;
+  border-radius: 0 3px 3px 0;
+  cursor: pointer;
+}
+.header__form button::after {
+  content: url(./../src/assets/img/search.svg);
 }/*# sourceMappingURL=style.css.map */
