--- a/pages/style.css
+++ b/pages/style.css
@@ -423,7 +423,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px 16px 24px;
+  padding: 16px 21px 16px;
   background-color: #fff;
   color: #1D1D1B;
   border: none;
@@ -523,4 +523,26 @@ body {
 
 .header__number a {
   color: #696969;
+}
+
+.header__mid {
+  padding-top: 34px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__mid-menu ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__bottom {
+  padding-top: 28px;
+}
+.header__bottom nav ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }/*# sourceMappingURL=style.css.map */
